fix: newsfeed crash, dock bar icons/layout, simplify encryption to AES-GCM
Add j$/util/Objects shim for desugared APIs missing from APK, fix stale
drawable IDs in DockBarInjector, refresh bottom nav layout, and reduce
encryption to a single GCM processor with toggle-only dialog menu.

Co-authored-by: Cursor <cursoragent@cursor.com>